--- a/style.css
+++ b/style.css
@@ -119,3 +119,17 @@ h3 {
     font-size: 14px;
   }
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+footer .copyright {
+    font-size: 14px;
+}
+
+footer .developer {
+    font-size: 12px;
+}
